Resolved issue with the layout of our hover items being misaligned

--- a/app/stylesheets/partials/_hover_dialog.sass
+++ b/app/stylesheets/partials/_hover_dialog.sass
@@ -1,11 +1,10 @@
 .hover
   position: relative
+  top: 10px
+  margin: 13px 13px auto auto !important
   top: 0px
-  width: 44%
+  width: 94%
   height: auto
-  margin: 0
-  padding: 10px
-  z-index: 99
   h3
     text-align: center
     padding: 0 5px
